@@ -1271,6 +1271,11 @@ BEGIN
     IDS_SPELLEDIT_CORRECTIONS "Corrections"
 END
 
+STRINGTABLE 
+BEGIN
+    IDS_PROC_CLEANUP        "cleaning up"
+END
+
 #endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
