@@ -37,6 +37,8 @@
        or a date as the revision number. (Stefan)
 - CHG: The revision column now sorts by number, not
        string and is nicely formatted. (Stefan Fuhrmann)
+- CHG: During cleanup a dialog box is shown to indicate
+       that somethings going on. (Stefan)
 - BUG: TortoiseMerge skipped diffs of one line with the
        "Next Diff" or "Previous Diff" commands. (Stefan)
 
